Partial fix for new-API issues. Increase minimum API to 16.